elb.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Two basic http instances behind a load balancer to serve up a static file
Parameters:
  KeyName:
    Description: Existing EC2 Keys to use to access EC2 Instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: MyKeys
  ImageId:
    Description: The ID of the EC2 AMI to use 
    Type: String
    Default: ami-2f39bf4b
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  EC2Instance1:
    Type: "AWS::EC2::Instance"
    Properties:
      KeyName: !Ref 'KeyName'
      ImageId: !Ref 'ImageId'
      InstanceType: t2.micro
      SecurityGroups: [!Ref 'InstanceSecurityGroup']
      UserData:
        Fn::Base64:
          !Sub |
              #!/bin/bash -xe
              yum install -y docker;
              service docker start;
              chkconfig docker on;
              usermod -a -G docker ec2-user;
              docker run --name nginx -p 80:80 -d sparkd/nginx-staticfile
  EC2Instance2:
    Type: "AWS::EC2::Instance"
    Properties:
      KeyName: !Ref 'KeyName'
      ImageId: !Ref 'ImageId'
      InstanceType: t2.micro
      SecurityGroups: [!Ref 'InstanceSecurityGroup']
      UserData:
        Fn::Base64:
          !Sub |
              #!/bin/bash -xe
              yum install -y docker;
              service docker start;
              chkconfig docker on;
              usermod -a -G docker ec2-user;
              docker run --name nginx -p 80:80 -d sparkd/nginx-staticfile
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH+HTTP access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: '0.0.0.0/0'
  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties: 
      LoadBalancerName: nginx-static-elb
      Listeners:
      - LoadBalancerPort: '80'
        InstancePort: '80'
        Protocol: HTTP
      AvailabilityZones:
      - ca-central-1b
      Instances:
      - !Ref 'EC2Instance1'
      - !Ref 'EC2Instance2'
      HealthCheck:
        Target: HTTP:80/
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '30'
        Timeout: '5'
Outputs:
  InstanceId1:
    Description: InstanceId of the newly created no.1 EC2 instance
    Value: !Ref 'EC2Instance1'
  InstanceId2:
    Description: InstanceId of the newly created no.2 EC2 instance
    Value: !Ref 'EC2Instance2'
